Added polyfills and file loader

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    hello
+    <h2>HELLO WORLD</h2>
+    <img src='../assets/images/gri-image-2.jpg' alt=''>
 </body>
 </html>
