--- a/src/index/index.html
+++ b/src/index/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+    <meta charset="UTF-8">
+    <title>Index</title>
 </head>
 <body>
-<a href='about.html'>About</a>
-<a href='home.html'>Home</a>
-<a href='index.html'>Index</a>
+<a href="about.html">About page</a>
 </body>
 </html>
