--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-    <h2>HELLO WORLD</h2>
+    <h2>REMOVE ALL CONTENT</h2>
+    <!--Only for demo purpose how to add images-->
     <img src='../assets/images/gri-image-2.jpg' alt=''>
 </body>
 </html>
